--- a/T365CalculatorScreens/Base.lproj/CDTimeline.storyboard
+++ b/T365CalculatorScreens/Base.lproj/CDTimeline.storyboard
@@ -149,8 +149,8 @@
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="25"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Choose a desired Closing Disclosure delivery date to begin" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kfa-ax-GGT">
-                                                    <rect key="frame" x="15" y="4" width="570" height="12"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose a desired Closing Disclosure delivery date to begin" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kfa-ax-GGT">
+                                                    <rect key="frame" x="15" y="6.5" width="570" height="12"/>
                                                     <fontDescription key="fontDescription" name="ProximaNova-Regular" family="Proxima Nova" pointSize="12"/>
                                                     <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -257,6 +257,9 @@
                                                             <color key="value" red="0.90196078431372551" green="0.90196078431372551" blue="0.90196078431372551" alpha="1" colorSpace="calibratedRGB"/>
                                                         </userDefinedRuntimeAttribute>
                                                     </userDefinedRuntimeAttributes>
+                                                    <connections>
+                                                        <action selector="addToCalendar:" destination="t4c-DV-h9s" eventType="touchUpInside" id="YYT-5d-Ac7"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                             <constraints>
@@ -302,7 +305,6 @@
                     </tableView>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
-                        <outlet property="addToCalendarButton" destination="cBu-44-nx7" id="cbe-rY-pp3"/>
                         <outlet property="chooseDateLabel" destination="Kfa-ax-GGT" id="iwV-Pz-CFA"/>
                         <outlet property="federalHolidayIndicator" destination="yh0-Dv-tzf" id="y6Q-Bo-4gA"/>
                         <outlet property="startClosingDateSegment" destination="Huw-d3-n80" id="n30-Gw-Hjz"/>
