--- a/T365CalculatorScreens/Base.lproj/CommonComponents.storyboard
+++ b/T365CalculatorScreens/Base.lproj/CommonComponents.storyboard
@@ -144,8 +144,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Pagination Container" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wTI-oq-6Ut">
-                                <rect key="frame" x="221" y="252" width="159" height="94"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pagination Container" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wTI-oq-6Ut">
+                                <rect key="frame" x="244" y="253" width="113" height="94"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="113" id="JCF-Y0-VFl"/>
                                     <constraint firstAttribute="height" constant="94" id="zCH-EN-vE2"/>
